[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["Data Architect <architect@zion.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
numpy = "*"
matplotlib = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"